<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_acc"
        android:title="@string/main_bnv_user"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_account_circle_black_24dp"/>
    <item
        android:id="@+id/action_library"
        android:title="@string/main_bnv_lib"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_library_books_black_24dp"/>
    <item
        android:id="@+id/action_new"
        android:title="@string/main_bnv_new"
        app:showAsAction="ifRoom"
        android:enabled="true"

        android:icon="@drawable/ic_palette_black_24dp"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/main_bnv_search"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_black_24dp"/>
</menu>